--- a/app/src/main/res/layout/whitelist.xml
+++ b/app/src/main/res/layout/whitelist.xml
@@ -7,7 +7,7 @@
     android:background="?android:attr/colorBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
